Add microapps api

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -24,6 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Load gpay microapps APIs -->
+    <script async src="https://microapps.google.com/apis/v1alpha/microapps.js"></script>
     <title>GPay GroupBuy</title>
   </head>
   <body>
